[package]
name = "mtls-debug-server"
version = "0.2.0"
edition = "2021"


[features]
default = []
embed-ui = []

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
rustls = "0.21"
tokio-rustls = "0.24"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rcgen = "0.12"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
once_cell = "1"
rustls-pemfile = "1"
ring = "0.17"
x509-parser = "0.16"
tls-parser = "0.11"
rusqlite = { version = "0.31", features = ["bundled"] }
